# waspinator

./: .gitignore  README.md  pyproject.toml  requirements.txt
hardware/: trap_v1.1 - battery.stl  trap_v1.1 - bottom.stl  trap_v1.1 - cam_cover.stl  trap_v1.1 - camera.stl  trap_v1.1 - cone.stl  trap_v1.1 - cover_inner.stl  trap_v1.1 - cover_raspy.stl  trap_v1.1 - inner part.stl  trap_v1.1 - raspy.stl  trap_v1.1 - servo.stl  trap_v1.1 - servo_distancing_plate.stl
models/: attributions.txt
test/integration/: test_model.py
waspinator/: decider.py  display.py  frame_provider.py  main.py  trap.py
